# trading-diary-agent

./: .env.example  .gitignore  README.md  dashboard.py  pyproject.toml
data/: sample_trades.csv
docs/: desktop.ini
scripts/: quickstart.sh
src/trading_diary/: __init__.py  analyzer.py  cli.py  database.py  importer.py  models.py  summarizer.py
tests/: test_importer.py  test_models.py
