[project]
name = "trading-diary-agent"
version = "0.1.0"
description = "AI-powered trading journal agent for futures traders. Analyzes trades, detects patterns, and generates coaching insights using Claude."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Jose Miguel Gonzalez"}
]
license = {text = "MIT"}
keywords = ["trading", "ai", "llm", "anthropic", "claude", "futures", "journal"]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
diary = "trading_diary.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_diary"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
